Delete event working

--- a/app/src/main/res/layout/activity_event_editor.xml
+++ b/app/src/main/res/layout/activity_event_editor.xml
@@ -24,6 +24,7 @@
         android:inputType="text"
         android:layout_below="@+id/textEventTitle"
         android:imeOptions="actionDone"
+        android:hint = "Enter your event title here"
         android:layout_centerHorizontal="true" />
 
     <TextView
