--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <ImageView
         android:layout_width="80dp"
@@ -9,6 +11,17 @@
         android:id="@+id/imageViewList"
         android:src="@drawable/calendar4list"
         android:layout_margin="5dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/textViewRowID"
+        android:maxWidth="1dp"
+        android:width="1dp"
+        android:maxHeight="1dp"
+        android:height="1dp" />
 
     <TextView
         android:layout_width="wrap_content"
