--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -5,29 +5,57 @@
     android:layout_height="match_parent"
     >
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/imageViewList"
-        android:src="@drawable/calendar4list"
-        android:layout_margin="5dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="47dp"
+        android:background="#4accff"
+        android:id="@+id/linear1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textViewRowID"
-        android:maxWidth="1dp"
-        android:width="1dp"
-        android:maxHeight="1dp"
-        android:height="1dp" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imagePlay"
+            android:src="@drawable/ic_action_play"
+            android:layout_margin="5dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textViewList"
-        android:layout_margin="5dp" />
+        <ImageView
+            android:id="@+id/imageExpand"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_action_expand"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/textViewRowID"
+            android:maxWidth="1dp"
+            android:width="1dp"
+            android:maxHeight="1dp"
+            android:height="1dp" />
+
+        <TextView
+            style="@style/fontStyle01"
+            android:singleLine="true"
+            android:textSize="16dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:id="@+id/textViewList"/>
+<!--
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:layout_margin="5dp"
+            android:textSize="12dp"
+            android:textIsSelectable="false"
+            android:paddingLeft="20dp"
+
+            android:paddingRight="10dp" />
+-->
+    </LinearLayout>
+
 </LinearLayout>
