--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -11,6 +11,9 @@
         android:layout_width="184dp"
         android:layout_height="wrap_content"
         android:id="@+id/buckysListView"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1.01" />
+        android:layout_gravity="center_vertical|top"
+        android:layout_weight="1.01"
+        android:divider="#A4C735"
+        android:dividerHeight="2dp"
+        android:background="#4accff" />
 </LinearLayout>
