--- a/app/src/main/res/layout/child_view.xml
+++ b/app/src/main/res/layout/child_view.xml
@@ -1,35 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:background="#99D6D6"
-    android:clickable="true"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:padding="5dp">
+    android:layout_height="55dip"
+    android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:gravity="center_vertical" >
-<!--
-        <ImageView
-            android:id="@+id/childImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_launcher"
-            android:contentDescription="@string/hello_world" />
--->
-        <TextView
-            android:id="@+id/textViewChild"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="@string/hello_world"
-            android:textSize="12sp"
-            android:textColor="#1919A3"
-            android:textStyle="normal|italic" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/lblListItem"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="17dip"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
 
 </LinearLayout>
