--- a/app/src/main/res/layout/parent_view.xml
+++ b/app/src/main/res/layout/parent_view.xml
@@ -1,17 +1,22 @@
-<CheckedTextView
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/textViewGroupName"
-    android:layout_width="wrap_content"
-    android:layout_height="30dp"
-    android:layout_marginLeft="5dp"
-    android:gravity="center_vertical"
-    android:text="@string/hello_world"
-    android:textSize="14dp"
-    android:textColor="#FFFFFF"
-    android:padding="10dp"
-    android:textSelectHandleLeft="@string/hello_world"
-    android:background="#009999"
-    android:textStyle="normal"
-    android:singleLine="true"
-    android:typeface="normal" />
+    android:id="@+id/parentLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:background="@color/BlueViolet">
+
+
+    <TextView
+        android:id="@+id/lblListHeader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textSize="17dp"
+        android:textColor="#f9f93d"
+        android:singleLine="true"
+        android:background="@color/BlueViolet" />
+
+</LinearLayout>
