--- a/app/src/main/res/menu/menu_event_editor.xml
+++ b/app/src/main/res/menu/menu_event_editor.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.hector.myproj03.EventEditor">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+
+    <item android:id="@+id/action_delete"
+        android:title="@string/action_delete"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_action_delete"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
